Added the info table for int constructor and plus int

--- a/test/stg/Makefile
+++ b/test/stg/Makefile
@@ -3,17 +3,21 @@ GCC_FLAGS := -Wall -ggdb
 COMPILER := ${comp}
 GCC_CMD := ${COMPILER} $(GCC_FLAGS) -I. -I $(SRC_ROOT)
 
-all: test/stg/target/sample_program
+all: test/stg/target/test
 
-test/stg/target/stg/%.o: src/stg/%.c
-	mkdir -p test/stg/target/stg
+test/stg/target/stg/plus_int/%.o: src/stg/plus_int/%.c
+	mkdir -p test/stg/target/stg/plus_int
 	$(GCC_CMD) $^ -c -o $@
 
 test/data/target/data/%.o: src/data/%.c
 	mkdir -p test/data/target/data
 	$(GCC_CMD) $^ -c -o $@
 
-test/stg/target/sample_program: test/stg/sample_program.c test/data/target/data/string_.o
+test/data/target/containers/%.o: src/containers/%.c
+	mkdir -p test/data/target/containers
+	$(GCC_CMD) $^ -c -o $@
+
+test/stg/target/test: test/stg/target/stg/plus_int/static.o test/data/target/data/string_.o test/data/target/containers/mmanager.o
 
 	$(GCC_CMD) -I . $^ -o $@
 
@@ -22,3 +26,4 @@ test/stg/target/sample_program: test/stg/sample_program.c test/data/target/data/
 clean:
 	rm -rf test/data/target/
 	rm -rf test/stg/target/
+
