--- a/test/stg/Makefile
+++ b/test/stg/Makefile
@@ -17,7 +17,8 @@ test/data/target/containers/%.o: src/containers/%.c
 	mkdir -p test/data/target/containers
 	$(GCC_CMD) $^ -c -o $@
 
-test/stg/target/test: test/stg/target/stg/plus_int/static.o test/data/target/data/string_.o test/data/target/containers/mmanager.o
+test/stg/target/test: test/stg/target/stg/plus_int/code.o test/stg/target/stg/plus_int/stack.o test/stg/target/stg/plus_int/static.o \
+			test/data/target/data/string_.o test/data/target/containers/mmanager.o
 
 	$(GCC_CMD) -I . $^ -o $@
 
