bugfixes and added main2 to the makefile

--- a/test/stg/Makefile
+++ b/test/stg/Makefile
@@ -3,7 +3,7 @@ GCC_FLAGS := -Wall -ggdb
 COMPILER := ${comp}
 GCC_CMD := ${COMPILER} $(GCC_FLAGS) -I. -I $(SRC_ROOT)
 
-all: test/stg/target/test
+all: test/stg/target/main1 test/stg/target/main2
 
 test/stg/target/stg/plus_int/%.o: src/stg/plus_int/%.c
 	mkdir -p test/stg/target/stg/plus_int
@@ -25,7 +25,14 @@ test/target/%.o: src/%.c
 	mkdir -p test/target
 	$(GCC_CMD) $^ -c -o $@
 
-test/stg/target/test: test/stg/target/stg/plus_int/code.o test/stg/target/stg/plus_int/stack.o test/stg/target/stg/plus_int/static.o test/stg/target/stg/plus_int/main.o \
+test/stg/target/main1: test/stg/target/stg/plus_int/code.o test/stg/target/stg/plus_int/stack.o test/stg/target/stg/plus_int/static.o test/stg/target/stg/plus_int/main.o \
+		test/data/target/data/string_.o test/containers/target/containers/mmanager.o test/containers/target/containers/arraylist.o\
+		     test/stg/target/stg/math.o test/target/typeclasses.o test/stg/target/stg/util.o test/containers/target/containers/llist.o\
+		   test/containers/target/containers/hash_set.o test/containers/target/containers/resizable_array.o test/containers/target/containers/hash_map.o 
+
+	$(GCC_CMD) -I . $^ -o $@
+
+test/stg/target/main2: test/stg/target/stg/plus_int/code.o test/stg/target/stg/plus_int/stack.o test/stg/target/stg/plus_int/static.o test/stg/target/stg/plus_int/main2.o \
 		test/data/target/data/string_.o test/containers/target/containers/mmanager.o test/containers/target/containers/arraylist.o\
 		     test/stg/target/stg/math.o test/target/typeclasses.o test/stg/target/stg/util.o test/containers/target/containers/llist.o\
 		   test/containers/target/containers/hash_set.o test/containers/target/containers/resizable_array.o test/containers/target/containers/hash_map.o 
