Only the list remains left to compile

--- a/test/stg/Makefile
+++ b/test/stg/Makefile
@@ -3,7 +3,7 @@ GCC_FLAGS := -Wall -ggdb
 COMPILER := ${comp}
 GCC_CMD := ${COMPILER} $(GCC_FLAGS) -I. -I $(SRC_ROOT)
 
-all: test/stg/target/main1 test/stg/target/main2
+all: test/stg/target/main1 test/stg/target/main2 test/stg/target/main3
 
 test/stg/target/stg/plus_int/%.o: src/stg/plus_int/%.c
 	mkdir -p test/stg/target/stg/plus_int
@@ -44,6 +44,7 @@ test/stg/target/main2: test/stg/target/stg/plus_int/code.o test/stg/target/stg/p
 	$(GCC_CMD) -I . $^ -o $@
 
 test/stg/target/main3: test/stg/target/stg/plus_int/code.o test/stg/target/stg/plus_int/stack.o test/stg/target/stg/plus_int/static.o test/stg/target/stg/list/list.o \
+        test/stg/target/stg/heap.o \
 		test/data/target/data/string_.o test/containers/target/containers/mmanager.o test/containers/target/containers/arraylist.o\
 		     test/stg/target/stg/math.o test/stg/target/stg/bindings.o test/target/typeclasses.o test/stg/target/stg/util.o test/containers/target/containers/llist.o\
 		   test/containers/target/containers/hash_set.o test/containers/target/containers/resizable_array.o test/containers/target/containers/hash_map.o \
