checkpoint 2 - everything compiles

--- a/test/stg/Makefile
+++ b/test/stg/Makefile
@@ -30,6 +30,7 @@ test/target/%.o: src/%.c
 	$(GCC_CMD) $^ -c -o $@
 
 test/stg/target/main1: test/stg/target/stg/plus_int/code.o test/stg/target/stg/plus_int/stack.o test/stg/target/stg/plus_int/static.o test/stg/target/stg/plus_int/main.o test/stg/target/stg/list/list.o \
+        test/stg/target/stg/heap.o \
 		test/data/target/data/string_.o test/containers/target/containers/mmanager.o test/containers/target/containers/arraylist.o\
 		     test/stg/target/stg/math.o test/target/typeclasses.o  test/stg/target/stg/bindings.o test/stg/target/stg/util.o test/containers/target/containers/llist.o\
 		   test/containers/target/containers/hash_set.o test/containers/target/containers/resizable_array.o test/containers/target/containers/hash_map.o 
@@ -37,6 +38,7 @@ test/stg/target/main1: test/stg/target/stg/plus_int/code.o test/stg/target/stg/p
 	$(GCC_CMD) -I . $^ -o $@
 
 test/stg/target/main2: test/stg/target/stg/plus_int/code.o test/stg/target/stg/plus_int/stack.o test/stg/target/stg/plus_int/static.o test/stg/target/stg/plus_int/main2.o test/stg/target/stg/list/list.o \
+        test/stg/target/stg/heap.o \
 		test/data/target/data/string_.o test/containers/target/containers/mmanager.o test/containers/target/containers/arraylist.o\
 		     test/stg/target/stg/math.o test/stg/target/stg/bindings.o test/target/typeclasses.o test/stg/target/stg/util.o test/containers/target/containers/llist.o\
 		   test/containers/target/containers/hash_set.o test/containers/target/containers/resizable_array.o test/containers/target/containers/hash_map.o 
@@ -57,5 +59,6 @@ clean:
 	rm -rf test/data/target/
 	rm -rf test/stg/target/
 	rm -rf test/containers/target/
+	rm -rf test/target/*.o
 	rm -rf test/*.o
 
