Added a number of bugfixes - most silly mistakes

--- a/test/stg/Makefile
+++ b/test/stg/Makefile
@@ -29,11 +29,19 @@ test/target/%.o: src/%.c
 	mkdir -p test/target
 	$(GCC_CMD) $^ -c -o $@
 
-test/stg/target/main1: test/stg/target/stg/plus_int/code.o test/stg/target/stg/plus_int/stack.o test/stg/target/stg/plus_int/static.o test/stg/target/stg/plus_int/main.o test/stg/target/stg/list/list.o \
+test/stg/target/test_bindings: test/stg/test_bindings.c test/stg/target/stg/plus_int/code.o test/stg/target/stg/plus_int/stack.o test/stg/target/stg/plus_int/static.o test/stg/target/stg/plus_int/main.o test/stg/target/stg/list/list.o \
         test/stg/target/stg/heap.o \
 		test/data/target/data/string_.o test/containers/target/containers/mmanager.o test/containers/target/containers/arraylist.o\
 		     test/stg/target/stg/math.o test/target/typeclasses.o  test/stg/target/stg/bindings.o test/stg/target/stg/util.o test/containers/target/containers/llist.o\
 		   test/containers/target/containers/hash_set.o test/containers/target/containers/resizable_array.o test/containers/target/containers/hash_map.o 
+
+	$(GCC_CMD) -I . $^ -o $@
+
+test/stg/target/main1: test/stg/target/stg/plus_int/code.o test/stg/target/stg/plus_int/stack.o test/stg/target/stg/plus_int/static.o test/stg/target/stg/plus_int/main.o test/stg/target/stg/list/list.o \
+        test/stg/target/stg/heap.o \
+		test/data/target/data/string_.o test/containers/target/containers/mmanager.o test/containers/target/containers/arraylist.o\
+		     test/stg/target/stg/math.o test/target/typeclasses.o  test/stg/target/stg/bindings.o test/stg/target/stg/util.o test/containers/target/containers/llist.o\
+		   test/containers/target/containers/hash_set.o test/containers/target/containers/resizable_array.o test/containers/target/containers/hash_map.o
 
 	$(GCC_CMD) -I . $^ -o $@
 
